# outline-PPGtoHR

./: .gitignore  AGENTS.md  AutoOptimize_Bayes_Search_cas_chengfa.m  AutoOptimize_Result_Viewer_cas_chengfa.m  CLAUDE.md  ChooseDelay1218.m  Find_maxpeak.m  Find_nearBiggest.m  Find_realHR.m  HeartRateSolver_cas_chengfa.m  README.md  lmsFunc_h.m  requirements-plotting.txt
python/: README.md  environment.yml  pyproject.toml
python/src/ppg_hr/: __init__.py  __main__.py  batch_pipeline.py  cli.py  params.py
python/src/ppg_hr/core/: __init__.py  adaptive_filter.py  choose_delay.py  delay_profile.py  fft_peaks.py  find_maxpeak.py  find_near_biggest.py  find_real_hr.py  heart_rate_solver.py  klms_filter.py  lms_filter.py  noncausal_lms.py  noncausal_tap.py  ppg_peace.py  rff_lms.py  volterra_filter.py
python/src/ppg_hr/gui/: app.py  (+7 more)
python/tests/: conftest.py  test_adaptive_filter.py  test_batch_pipeline.py  test_batch_viewer.py  test_bayes_optimizer.py  test_choose_delay.py  test_cli.py  test_data_loader.py  test_delay_profile.py  test_fft_peaks.py  test_find_maxpeak.py  test_find_near_biggest.py  test_find_real_hr.py  test_gui_smoke.py  test_gui_v2_smoke.py  test_heart_rate_solver.py  test_klms_filter.py  test_lms_filter.py  test_noncausal_filters.py  test_params.py  test_ppg_peace.py  test_preprocess_utils.py  test_result_viewer.py  test_v2_batch_pipeline.py  test_v2_optimizer.py  test_v2_plotting.py  test_v2_preprocess.py  test_v2_qc.py  test_v2_reference_groups.py  test_v2_report.py  test_v2_solver.py  test_v2_spo2.py  test_v2_spo2_plotting.py  test_v2_v1_parity.py  test_volterra_filter.py
python/tests/golden/: README.md
(+196 files in other folders)
